--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -153,14 +153,15 @@ nav#main-nav {
   border-radius: 0;
 
 
-    .dropdown-item {
-      color: #B7B7B7;
-      border-bottom: 1px solid #B7B7B7;
-      width: 90%;
-      margin-left: 5%;
+  .dropdown-item {
+    color: #B7B7B7;
+    border-bottom: 1px solid #B7B7B7;
+    width: 90%;
+    margin-left: 5%;
   }
-  li:last-child{
-    .dropdown-item{
+
+  li:last-child {
+    .dropdown-item {
       border: none;
     }
   }
@@ -345,12 +346,14 @@ blockquote.wp-block-quote {
 
 .lift-me {
   color: #242424;
-  width: 360px;
+  width: 600px;
   margin: 0 auto;
   position: relative;
-  top: -240px;
+  top: -222px;
   z-index: 15;
-  font-size: 14px;
+  font-size: 21px;
+  line-height: 31px;
+  font-weight: bold;
 }
 
 
@@ -669,8 +672,6 @@ body.home {
           line-height: 22px;
         }
       }
-
-
     }
   }
 
@@ -789,5 +790,76 @@ body.home {
     line-height: 30px;
     margin-top: 54px;
     font-weight: bold;
+  }
+}
+
+.departments-carousel {
+  h2 {
+    margin-bottom: 150px;
+  }
+
+  .slick-slider {
+    margin-bottom: 203px;
+  }
+
+  .slick-prev {
+    right: 80px;
+    left: auto;
+    top: 307px;
+  }
+
+  .slick-next {
+    right: 40px;
+    top: 307px;
+  }
+
+  .wp-block-cb-carousel .slick-slide {
+    margin: 0;
+
+    figure {
+      display: flex;
+      width: 160px;
+      height: 210px;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      align-content: center;
+      justify-content: space-between;
+      align-items: center;
+
+      figcaption {
+        font-size: 22px;
+        color: #005289;
+        text-align: center;
+        margin-top: 35px;
+        font-weight: bold;
+        line-height: 22px;
+      }
+    }
+  }
+}
+
+.department-departments {
+  padding-top: 125px;
+
+  h3 {
+    font-family: 'Gill Sans Bold';
+    font-size: 34px;
+    line-height: 1;
+    margin-top: 61px;
+    color: #3FBEAC;
+    margin-bottom: 50px;
+  }
+
+  p {
+    margin-bottom: 80px;
+  }
+
+  ul {
+    padding-left: 0;
+    margin-bottom: 90px;
+
+    li {
+      margin-bottom: 10px;
+    }
   }
 }
